Fixed blue line visibility from modal

--- a/src/blocks/modal-feedback/modal-feedback.scss
+++ b/src/blocks/modal-feedback/modal-feedback.scss
@@ -11,7 +11,7 @@
   right: 0;
   top: 0;
   z-index: 1000;
-  border-left: 1px solid vars.$color-border;
+  border-left: none;
   transform: translateX(100%);
   transition: transform 0.3s;
 
@@ -68,6 +68,7 @@
     position: relative;
 
     &::before {
+      display: none;
       content: '';
       position: absolute;
       border-radius: 30px;
@@ -141,4 +142,9 @@
   transform: translateX(0);
   transition: transform 0.3s;
   box-shadow: 16px 0 52px #0e185033;
+  border-left: 1px solid vars.$color-border;
+
+  .modal-feedback__title::before {
+    display: block;
+  }
 }
